force-app/main/default/objects/Asset/fields/Asset_ID__c.field-meta.xml
<CustomField>
    <fullName>Asset_ID__c</fullName>
    <externalId>true</externalId>
    <label>Asset ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>