force-app/main/default/objects/Asset/fields/Asset_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Asset_Ownership__c</fullName>
    <label>Asset Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Citron</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>