force-app/main/default/objects/Asset/fields/Bar_Code__c.field-meta.xml
<CustomField>
    <fullName>Bar_Code__c</fullName>
    <label>Bar Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>