force-app/main/default/objects/Asset/fields/IsReallocated__c.field-meta.xml
<CustomField>
    <fullName>IsReallocated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reallocated</label>
    <type>Checkbox</type>
</CustomField>