force-app/main/default/objects/Asset/fields/Last_Scanned_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Scanned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Scanned By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>