force-app/main/default/objects/Asset/fields/Last_Scanned_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Last_Scanned_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Scanned Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>