force-app/main/default/objects/Asset/fields/Site_Survey__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Survey</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Site_Survey__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Site_Survey__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>