force-app/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>Bar_Code__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY_ENUM</columns>
    <filterScope>Everything</filterScope>
    <label>All Assets</label>
    <language>en_US</language>
</ListView>