force-app/main/default/objects/Asset/listViews/My_Assets.listView-meta.xml
<ListView>
    <fullName>My_Assets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>Bar_Code__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY_ENUM</columns>
    <filterScope>Everything</filterScope>
    <label>My Assets</label>
    <language>en_US</language>
</ListView>